Refactor NetconfKeystoreAdapter
NetconfKeystoreAdapter is being instantiated all over the place, whereas
this really should be a singleton service. Factor out the common API and
provide it as an on-demand service, which is injected into all users.

JIRA: NETCONF-1006
Change-Id: Ib532c130d26fcc68796d401239da7b8e57b39382
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>